--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Тестовое задание</title>
+    <meta name="description" content="Это описание сайта">
+    <meta name="keywords" content="Тут ключевые слова для сайта">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/dropzone.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous">
+    </script>
+    <script src="js/dropzone.min.js"></script>
+    <script src="js/upload.js"></script>
 </head>
 <body>
-<div class="container">
+<div class="wrapper">
     <div class="header">
+        <div class="container">
         <p class="title">
             <span class="slim">Моя</span><span class="bold"> супер команда</span>
         </p>
@@ -71,7 +85,10 @@
             </div>
         </div>
     </div>
+    </div>
+
     <div class="middle dark_light">
+        <div class="container">
         <p class="title">
             <span class="slim">Добавь своего</span><span> героя</span>
         </p>
@@ -79,35 +96,50 @@
             <div class="delimiter"></div>
             <div class="delimiter short"></div>
         </div>
-            <form class="hero_add_form"  name="add_hero" action="add_hero.php" method="post">
+            <form class="hero_add_form"  name="add_hero" action="add_hero.php" method="post" enctype="multipart/form-data">
                 <div class="row">
                     <div class="col">
-                    <label for="hero_name">Имя <abbr title="required">*</abbr><br></label>
-                        <input type="text" id="hero_name">
+                        <div class="input1">
+                            <label for="hero_name">Имя <abbr title="required">*</abbr></label><br>
+                            <input type="text" id="hero_name">
+                        </div>
                     </div>
                     <div class="col">
-                    <label for="hero_title">Титул <abbr title="required">*</abbr><br></label>
-                        <input type="text" id="hero_title">
+                        <div class="input2">
+                            <label for="hero_title">Титул <abbr title="required">*</abbr></label><br>
+                            <input type="text" id="hero_title">
+                        </div>
                     </div>
                 </div>
-                <p>
-                    <label for="hero_file">Фото <abbr title="required">*</abbr></label>
-                    <input type="file" id="hero_file">
-                </p>
-                <p><button class="btn_accept" type="submit">Принять</button></p>
+                <div class="dropzone_block">
+                    <p>Фото <abbr title="required">*</abbr></p>
+                    <div id="myDropzone" class="dropzone" name="mainFileUploader">
+                        <div class="fallback">
+                            <label for="hero_file">Фото <abbr title="required">*</abbr></label>
+                            <input type="file" id="hero_file" name="file">
+                        </div>
+                    </div>
+                </div>
+                <button id="submit-all" class="btn_accept" type="submit">Принять</button>
             </form>
+        </div>
     </div>
     <div class="footer">
-        <div class="copyright">
-            <span>ALL RIGHTS RESERVED. COPYRIGHT © CKDIGITAL</span>
-        </div>
-        <div class="links">
-            <img src="images/links/facebook.png" alt="facebook">
-            <img src="images/links/twitter.png" alt="twitter">
-            <img src="images/links/google.png" alt="google">
-            <img src="images/links/linkedin.png" alt="linkedin">
+        <div class="container">
+            <div class="footer_block">
+            <div class="copyright">
+                <span>ALL RIGHTS RESERVED. COPYRIGHT © CKDIGITAL</span>
+            </div>
+            <div class="links">
+                <img src="images/links/facebook.png" alt="facebook">
+                <img src="images/links/twitter.png" alt="twitter">
+                <img src="images/links/google.png" alt="google">
+                <img src="images/links/linkedin.png" alt="linkedin">
+            </div>
+            </div>
         </div>
     </div>
 </div>
+
 </body>
 </html>
